# pypi-example-package

./: LICENSE  README.md  pyproject.toml
example_package_opteemo/: __main__.py  cli.py  hello.py
